# CMakeTutorial

./: CMakeLists.txt  main.cpp
MyClass/: CMakeLists.txt  MyClass.cpp
MyClass/include/: MyClass.hpp
